<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="5"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_add"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="10"
        android:title="@string/add"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_del"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="10"
        android:title="@string/del"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_info"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="20"
        android:title="@string/info"
        app:showAsAction="ifRoom" />
</menu>