<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/date_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/dttm_note" />
    <TextView
        android:id="@+id/header_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="30sp"
        android:text="@string/note" />

    <TextView
        android:id="@+id/description_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/description_note" />

    <Button
        android:id="@+id/btn_change_date_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_change_date_note_name" />

</LinearLayout>