<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/date_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/purple_700"
        android:textSize="@dimen/note_date_size"
        android:text="@string/dttm_note" />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/header_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note"
        android:textSize="@dimen/note_title_size"
        android:textStyle="bold"
        android:text="@string/note" />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/description_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/note_desc_size"
        android:hint="@string/description_note"
        android:text="@string/description_note" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_note_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_note_ok"
        />
</LinearLayout>